--- a/src/css/style.css
+++ b/src/css/style.css
@@ -138,6 +138,7 @@ body {
 
 .rodape {
     background: url(./src/images/fundo-rodape.jpg) center center no-repeat;
+    background-color: black;
     padding: 35px 30px;
     background-size: cover;
 }
